--- a/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
+++ b/src/Mvc/MvcTemplates/N2/Resources/Css/framed.css
@@ -4,6 +4,7 @@
 a img,
 .command img{ margin-right:1px; vertical-align:middle; }
 .nav-tabs > li > a { border-radius:0 !important; }
+.framed .tab-content { overflow:visible; }
 td,th { vertical-align:top; }
 
 /* toolbar */
